--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.31'
+    id 'org.springframework.boot' version '2.1.5.RELEASE'
 }
 
 version '1.0-SNAPSHOT'
